# df-2.0-aima-log-analysis

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  test_send_log.py
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  health.py  logs.py
app/core/: auth_external.py  config.py  error_handling.py  logging.py  security.py  security_enhanced.py
app/db/: __init__.py  session.py
app/messaging/: __init__.py  connection.py  consumer.py  publisher.py
app/middleware/: __init__.py  security_middleware.py
app/models/: __init__.py  analysis_result.py  base.py  log_entry.py  pattern.py
app/monitoring/: __init__.py  metrics.py
app/processing/: __init__.py  ai_analyzer.py  analyzer.py  anomaly_detector.py  enhanced_ingestion.py  ingestion.py  pattern_detector.py
app/schemas/: __init__.py  log_schemas.py
app/services/: __init__.py  analysis_service.py  ingestion_service.py  log_service.py  pattern_service.py
tests/: __init__.py  conftest.py  test_health.py
